manifests/kustomize/env/cert-manager/platform-agnostic-standalone-tls/patches/apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-pipeline
spec:
  ports:
    - name: tls
      port: 8888
      protocol: TCP
      targetPort: 8888
      appProtocol: https
