manifests/kustomize/env/cert-manager/platform-agnostic-standalone-tls/patches/metadata-envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-envoy-deployment
  labels:
    component: metadata-envoy
spec:
  template:
    spec:
      containers:
        - name: container
          args:  [  "/etc/envoy/envoy-config.yaml" ]
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/envoy/tls
              readOnly: true
            - name: envoy-tls-enabled
              mountPath: /etc/envoy
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: kfp-api-tls-cert
        - name: envoy-tls-enabled
          configMap:
            name: envoy-config-tls-enabled
