manifests/kustomize/env/cert-manager/platform-agnostic-standalone-tls/patches/metadata-envoy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: metadata-envoy-service
spec:
  ports:
    - name: tls
      port: 9090
      protocol: TCP
      appProtocol: https
