manifests/kustomize/env/cert-manager/platform-agnostic-standalone-tls/patches/metadata-grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-grpc-deployment
  labels:
    component: metadata-grpc-server
spec:
  template:
    spec:
      volumes:
        - name: tls-certs
          secret:
            secretName: kfp-api-tls-cert
        - name: grpc-tls-config
          emptyDir: { }
        - name: mysql-secret
          secret:
            secretName: mysql-secret

      initContainers:
        - name: generate-config
          image: gcr.io/tfx-oss-public/ml_metadata_store_server:1.21.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 0
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          command: [ "/bin/sh", "-ec" ]
          args:
            - |
              escape() { sed ':a;N;$!ba;s/\n/\\n/g' "$1"; }
              cat <<EOF >/etc/grpc/config.proto
              connection_config {
                mysql {
                  host: "${MYSQL_HOST}"
                  port: ${MYSQL_PORT}
                  database: "${MYSQL_DATABASE}"
                  user: "${DBCONFIG_USER}"
                  password: "${DBCONFIG_PASSWORD}"
                }
              }
              ssl_config {
                server_key: "$(escape /etc/pki/tls/certs/tls.key)"
                server_cert: "$(escape /etc/pki/tls/certs/tls.crt)"
                custom_ca: "$(escape /etc/pki/tls/certs/ca.crt)"
                client_verify: false
              }
              EOF
          env:
            - name: DBCONFIG_USER
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key: username
            - name: DBCONFIG_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key: password
            - name: MYSQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  name: pipeline-install-config
                  key: mlmdDb
            - name: MYSQL_HOST
              valueFrom:
                configMapKeyRef:
                  name: pipeline-install-config
                  key: mysqlHost
            - name: MYSQL_PORT
              valueFrom:
                configMapKeyRef:
                  name: pipeline-install-config
                  key: mysqlPort
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/pki/tls/certs
            - name: grpc-tls-config
              mountPath: /etc/grpc
            - name: mysql-secret
              mountPath: /etc/mysql-secret

      containers:
        - name: container
          args:
            - "--grpc_port=8080"
            - "--metadata_store_server_config_file=/etc/grpc/config.proto"
            - "--enable_database_upgrade=true"
            - "--grpc_channel_arguments=grpc.max_metadata_size=16384,grpc.max_receive_message_length=104857600,grpc.max_send_message_length=104857600"
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/pki/tls/certs
              readOnly: true
            - name: grpc-tls-config
              mountPath: /etc/grpc
