manifests/kustomize/env/cert-manager/platform-agnostic-standalone-tls/patches/ml-pipeline-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-ui
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline-ui
          env:
            - name: ML_PIPELINE_SERVICE_SCHEME
              value: "https"
            - name: NODE_EXTRA_CA_CERTS
              value: "/etc/pki/tls/certs/ca.crt"
            - name: ML_PIPELINE_SERVICE_HOST
              value: "ml-pipeline.kubeflow"
            - name: DISABLE_GKE_METADATA
              value: "true"

          volumeMounts:
            - name: tls-certs
              mountPath: /etc/pki/tls/certs
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: argo-workflows-agent-ca-certificates
