manifests/kustomize/env/cert-manager/platform-agnostic-standalone-tls/patches/persistence-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-persistenceagent
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline-persistenceagent
          command: ["/bin/sh", "-c", "persistence_agent --logtostderr=true --namespace=${NAMESPACE} --ttlSecondsAfterWorkflowFinish=${TTL_SECONDS_AFTER_WORKFLOW_FINISH} --numWorker ${NUM_WORKERS} --executionType ${EXECUTIONTYPE} --logLevel=${LOG_LEVEL} -mlPipelineServiceTLSEnabled=true -caCertPath=/etc/pki/tls/certs/ca.crt"]
          args:
            - "--mlPipelineAPIServerName=ml-pipeline.kubeflow.svc.cluster.local"
            - "--mlPipelineAPIServerHttpPort=8888"
            - "--mlPipelineAPIServerBasePath=/apis/v2beta1"
          env:
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: TTL_SECONDS_AFTER_WORKFLOW_FINISH
              value: "86400"
            - name: NUM_WORKERS
              value: "2"
            - name: LOG_LEVEL
              value: "info"
            - name: ML_PIPELINE_API_SERVER_TLS_ENABLED
              value: "true"
            - name: CA_CERT_PATH
              value: "/etc/pki/tls/certs/ca.crt"
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/pki/tls/certs
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: kfp-api-tls-cert
