manifests/kustomize/env/cert-manager/platform-agnostic-standalone-tls/patches/scheduledworkflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline-scheduledworkflow
          env:
            - name: LOG_LEVEL
              value: "info"
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: CRON_SCHEDULE_TIMEZONE
              valueFrom:
                configMapKeyRef:
                  name: pipeline-install-config
                  key: cronScheduleTimezone
            - name: ML_PIPELINE_SERVICE_TLS_ENABLED
              value: "true"
            - name: ML_PIPELINE_SERVICE_TLS_CERT
              value: "/etc/pki/tls/certs/tls.crt"
          volumeMounts:
          - mountPath: /var/run/secrets/kubeflow/tokens
            name: scheduledworkflow-sa-token
          - name: tls-certs
            mountPath: /etc/pki/tls/certs
            readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: kfp-api-tls-cert
